# outdoor_unit_cooler

./: .coveragerc  .eslintrc.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.cjs  .prettierrc.yaml  .yamlfmt  .yamllint  CLAUDE.md  Dockerfile  README.md  README_monitoring.md  compose.yaml  config.example.yaml  config.example.yml  config.schema  deploy_monitoring.sh  docker-compose.yml  fluentd.conf  install.sh  kubernetes-monitoring.yaml  monitoring-compose.yml  monitoring.Dockerfile  monitoring_config.yaml  pyproject.toml  renovate.json  requirements.txt  test_debug.py  test_webui_debug.py
.github/: dependabot.yml
.github/workflows/: lint.yaml  regression.yaml  security.yaml
app/: cooler_controller.py  unit_cooler.py  webapp.py
cron/: unit_cooler
kubernetes/: outdoor_unit_cooler.yml  unit-cooler.yml
lib/: actuator.py  aircon.py  control.py  control_config.py  control_pubsub.py  fd_q10c.py  flask_util.py  footprint.py  logger.py  ltc2874.py  notify_slack.py  sense_data.py  sensor_data.py  unit_cooler.py  unit_cooler_info.py  valve.py  valve_state.py  webapp_base.py  webapp_config.py  webapp_event.py  webapp_log.py  webapp_log_proxy.py  webapp_util.py  work_log.py
lib/sensor/: fd_q10c.py  ltc2874.py
react/: index.html  package-lock.json  package.json  vite.config.ts
react.old/: package.json
react.old/public/: manifest.json
react.old/src/: App.css  App.js
react/public/: index.html  manifest.json
react/src/: App.css  App.js  App.tsx  index.css
react/src/components/: AirConditioner.tsx  CoolingMode.tsx  History.tsx  Log.tsx  Sensor.tsx  Watering.tsx
react/src/components/AirConditioner/: AirConditioner.js
react/src/components/CoolingMode/: CoolingMode.js
react/src/components/Log/: Log.js
react/src/components/Sensor/: Sensor.js
react/src/components/Watering/: Watering.js
react/src/components/common/: AnimatedNumber.tsx  ErrorMessage.tsx  Loading.tsx
react/src/hooks/: useApi.ts  useEventSource.ts
react/src/lib/: ApiResponse.tsx  Util.tsx  util.js
react/src/types/: common.ts
script/: buildkitd.toml  registry_pull.zsh  registry_push.zsh
src/: .#webui.py  actuator.py  aircon.py  config.example.yml  config.yaml.example  controller.py  fd_q10c.py  healthz.py  logger.py  ltc2874.py  notifier.py  sense_cooler.py  unit_cooler.py  valve.py  webapp.py  webui.py
src/unit_cooler/: const.py  util.py
src/unit_cooler/actuator/: control.py  log_server.py  monitor.py  sensor.py  subscribe.py  valve.py  valve_status.py  web_server.py  work_log.py  worker.py
src/unit_cooler/actuator/api/: metrics.py
src/unit_cooler/actuator/webapi/: __init__.py  flow_status.py  metrics.py  valve_status.py
src/unit_cooler/control/: config.py  engine.py  publish.py  pubsub.py  sensor.py
src/unit_cooler/controller/: engine.py  message.py  sensor.py
src/unit_cooler/metrics/: __init__.py  analyzer.py  collector.py
src/unit_cooler/metrics/webapi/: __init__.py  page.py  page_js.py
src/unit_cooler/pubsub/: publish.py  subscribe.py
src/unit_cooler/webui/: cooler_stat.py  worker.py
src/unit_cooler/webui/api/: __init__.py  cooler_stat.py
src/unit_cooler/webui/webapi/: cooler_stat.py
test/: conftest.py  test_basic.py
tests/: __init__.py  conftest.py  test_basic.py  test_error_handling.py  test_helpers.py  test_playwright.py
tmp-my-lib/tests/data/chrome/test/: Local State
tmp-my-lib/tests/data/chrome/test/Default/: Network Persistent State  Preferences
tmp-my-lib/tests/data/chrome/test/component_crx_cache/: metadata.json
